--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": " build",
+    "test": " test",
+    "eject": "eject"
   },
   "eslintConfig": {
     "extends": [
